--- a/build
+++ b/build
@@ -3,7 +3,7 @@ cd /tmp/rom # Depends on where source got synced
 rm -rf .repo & # lets remove unnecessary things, so that no storage issue can occur
 
 # Normal build steps
-. build/envsetup.sh 
+source build/envsetup.sh 
 lunch kangos_X01AD-userdebug  ##edit this
 export CCACHE_DIR=/tmp/ccache ##set additional flags if you need(optional)
 export CCACHE_EXEC=$(which ccache)
